fix: resolve visibility for the feature manager when chats would overlap

--- a/extension/features/feature-manager.css
+++ b/extension/features/feature-manager.css
@@ -45,12 +45,13 @@
 	min-height: fit-content;
 	max-height: 82vh;
 	width: fit-content;
-	padding: 0 12.5px 12.5px 12.5px;
+	padding: 0 12px 12px 12px;
 	border-radius: 15px 0 15px 15px;
 	background-color: #fff;
 	border: 1px solid lightgray;
 	display: none;
 	overflow: hidden auto;
+	margin-bottom: 48px;
 }
 
 body.dark-mode #tt-page-status .tt-features-list {
@@ -136,7 +137,7 @@ body.dark-mode #tt-page-status .tt-features-list {
 		.name {
 			margin-top: 5px;
 			font-weight: bold;
-			border-bottom: 2.5px solid #fff;
+			border-bottom: 3px solid #fff;
 			margin-bottom: 5px;
 		}
 	}
@@ -146,7 +147,7 @@ body.dark-mode #tt-page-status .tt-features-list {
 #tt-page-status .tt-features-list div[scope] > div:first-child {
 	border-bottom: 2px solid lightgray;
 	font-weight: bold;
-	padding-bottom: 2.5px;
+	padding-bottom: 3px;
 	margin-top: 5px;
 	margin-bottom: 5px;
 	text-align: center;
